...
// MARK: - Constants

private extension ImageGenerationPresenter {

    enum Constants {
        static let imageSize = 350
        static let generationErrorAlertTitle = "Unable to generate image"
        static let generationErrorAlertMessage = "Please, enter your request into text field"
        static let buttonTitle = "Generate image"
        static let dublicateRequestErrorAlertTitle = "This request already had been completed"
        static let dublicateRequestErrorAlertMessage = "Look at tab \"Favorites\""
    }
}

