...

// MARK: - Constants

private extension FavoriteImagesViewController {

    enum Constants {
        static let okTitle = "OK"
    }
}

